--- a/front/index.html
+++ b/front/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
     <title>Solid App</title>
   </head>
-  <body>
+  <body class="h-screen w-screen">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
