--- a/front/index.html
+++ b/front/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
     <title>Solid App</title>
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
   <body class="h-screen w-screen">
     <noscript>You need to enable JavaScript to run this app.</noscript>
